--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -19,7 +19,7 @@
         <!--Formulario Login-->
         <div class="form singinForm">
             <form [formGroup]="myForm" (ngSubmit)="login()">
-                <img src="/assets/logoE.png" alt="logo" style="margin-bottom: 40px;">
+                <img src="/assets/logoE.webp" alt="logo" style="margin-bottom: 40px;">
                 <h3>Iniciar Sesión</h3>
                 <input type="text" placeholder="Correo" name="emailUser" formControlName="email">
                 <input type="password" placeholder="Contraseña" name="passwordUser" formControlName="password">
