--- a/src/app/pages/page/main/main.component.html
+++ b/src/app/pages/page/main/main.component.html
@@ -50,7 +50,7 @@
       <div class="content">
         <h3 class="modulo-title">MÓDULO 2</h3>
         <p>Cooperativas 1 </p>
-        <a href="#" style="margin-top: 40px;">Ver Módulo</a>
+        <a routerLink="/inicio/modulo-dos" style="margin-top: 40px;">Ver Módulo</a>
       </div>
     </div>
 
