--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,16 +1,16 @@
 <footer>
-  <div class="container__footer d-flex flex-wrap justify-content-between">
+  <div class="waves">
+    <div class="wave" id="wave1"></div>
+    <div class="wave" id="wave2"></div>
+    <div class="wave" id="wave3"></div>
+    <div class="wave" id="wave4"></div>
+  </div>
+  <div class="container__footer d-flex flex-wrap justify-content-evenly">
 
-    <div class="waves">
-      <div class="wave" id="wave1"></div>
-      <div class="wave" id="wave2"></div>
-      <div class="wave" id="wave3"></div>
-      <div class="wave" id="wave4"></div>
-    </div>
 
     <div class="row" style="--bs-gutter-x: 0rem">
 
-      <div class="box__footer col d-flex flex-column align-items-center">
+      <div class="box__footer col d-flex flex-column align-items-center justify-content-center">
         <div class="logo">
           <img src="/assets/logo-Buro.png" width="200px" alt="">
         </div>
@@ -18,26 +18,16 @@
 
       <div class="box__footer d-flex flex-column col text-center text-md-start">
         <h2>ENLACES WEB</h2>
-        <a href="https://www.libertadsanpablo.com/page61.html" target="_blank">Aviso de Privacidad</a>
+        <a href="https://www.libertadsanpablo.com/#/aviso" target="_blank">Aviso de Privacidad</a>
         <a href="https://www.gob.mx/condusef" target="_blank">Condusef</a>
-        <a href="https://www.libertadsanpablo.com/assets/files/unidad-especializada.pdf" target="_blank">Unidad Especializada De Atención a Socios</a>
-        <a href="https://www.libertadsanpablo.com/assets/files/DespachosDeCobranza.pdf" target="_blank">Despachos De Cobranza Externos</a>
-        <a href="https://www.libertadsanpablo.com/assets/files/derechos_arco.pdf" target="_blank">Derechos Arco</a>
-        <a href="https://www.libertadsanpablo.com/assets/files/CostosYComiciones_Agosto-2023.pdf" target="_blank">Costos y Comisiones</a>
+        <a href="https://www.libertadsanpablo.com/assets/pdf/unidad-especializada.pdf" target="_blank">Unidad Especializada De Atención a Socios</a>
+        <a href="https://www.libertadsanpablo.com/assets/pdf/DespachosDeCobranza.pdf" target="_blank">Despachos De Cobranza Externos</a>
+        <a href="https://www.libertadsanpablo.com/assets/pdf/derechos_arco.pdf" target="_blank">Derechos Arco</a>
+        <a href="https://www.libertadsanpablo.com/assets/pdf/CostosYComiciones_Septiembre-2023.pdf" target="_blank">Costos y Comisiones</a>
       </div>
 
-      <div class="box__footer d-flex flex-column col text-center text-md-start">
-        <h2>ENLACES ÚTILES</h2>
-        <a href="https://www.libertadsanpablo.com/page48.html" target="_blank">Saldos en Línea</a>
-        <a href="https://www.libertadsanpablo.com/page53.html" target="_blank">Quiero Ser Socio</a>
-        <a href="https://www.libertadsanpablo.com/page24.html" target="_blank">Créditos</a>
-        <a href="https://www.libertadsanpablo.com/page1.html" target="_blank">Sucursales</a>
-        <a href="https://www.libertadsanpablo.com/page44.html" target="_blank">Historia</a>
-      </div>
-
-      <div class="box__footer d-flex flex-column col text-center text-md-start">
+      <div class="box__footer d-flex flex-column col text-center text-md-start justify-content-center">
         <h2>SÍGUENOS</h2>
-        <p>REDES SOCIALES</p>
         <a href="https://www.facebook.com/CajaSanPabloOficial" target="_blank"><i class="fab fa-facebook-square"></i> Facebook</a>
         <a href="https://twitter.com/cajasanpablo" target="_blank"><i class="fab fa-twitter-square"></i> Twitter</a>
         <a href="https://www.instagram.com/cajapopularsanpablo/" target="_blank"><i class="fab fa-instagram-square"></i> Instagram</a>
@@ -48,7 +38,7 @@
   </div>
   <div class="box__copyright text-center">
     <hr>
-    <p> <i class="far fa-copyright"></i> 2015 - 2022 Caja Popular San Pablo S.C. de A.P. de R.L. de C.V.<br>
+    <p> <i class="far fa-copyright"></i> 2015 - 2023 Caja Popular San Pablo S.C. de A.P. de R.L. de C.V.<br>
       <b>Reservados todos los derechos.</b>
     </p>
   </div>
