--- a/src/app/pages/page/main/main.component.html
+++ b/src/app/pages/page/main/main.component.html
@@ -62,7 +62,7 @@
       <div class="content">
         <h3 class="modulo-title">MÓDULO 3</h3>
         <p>Cooperativas 2</p>
-        <a href="#" style="margin-top: 40px;">Ver Módulo</a>
+        <a routerLink="/inicio/modulo-tres" style="margin-top: 40px;">Ver Módulo</a>
       </div>
     </div>
 
@@ -70,55 +70,3 @@
 </section>
 <!--END CARDS MODULOS-->
 
-<!--START CARDS MODULOS RESPONSIVOS 2-->
-<section class="courses">
-  <div class="box__container">
-
-    <div class="box">
-      <div class="image">
-        <img src="/assets/course-1-1.png" alt="">
-        <h3>Cooperativismo</h3>
-      </div>
-      <div class="contents">
-        <h3>Introduccion al Cooperativismo</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <a href="/assets/introduccionAlCooperativismo.php" class="btns">Leer más</a>
-        <div class="icons">
-          <span><i class="fas fa-book"></i> Módulo 1 </span>
-          <span><i class="fa-solid fa-clock"></i> 1 hora </span>
-        </div>
-      </div>
-    </div>
-    <div class="box">
-      <div class="image">
-        <img src="/assets/course-1-2.png" alt="">
-        <h3>Cooperativismo</h3>
-      </div>
-      <div class="contents">
-        <h3>Cooperativas 1</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <a href="#" class="btns">Leer más</a>
-        <div class="icons">
-          <span><i class="fas fa-book"></i> Módulo 2 </span>
-          <span><i class="fa-solid fa-clock"></i> 1 hora </span>
-        </div>
-      </div>
-    </div>
-    <div class="box">
-      <div class="image">
-        <img src="/assets/course-1-3.png" alt="">
-        <h3>Cooperativismo</h3>
-      </div>
-      <div class="contents">
-        <h3>Cooperativas 2</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <a href="#" class="btns">Leer más</a>
-        <div class="icons">
-          <span><i class="fas fa-book"></i> Módulo 3 </span>
-          <span><i class="fa-solid fa-clock"></i> 1 hora </span>
-        </div>
-      </div>
-    </div>
-
-  </div>
-</section>
