--- a/src/app/pages/components/retro-act3/retro-act3.component.scss
+++ b/src/app/pages/components/retro-act3/retro-act3.component.scss
@@ -1,8 +1,19 @@
 .retroalimentacion{
   margin: 100px 0;
+
+  #introduccion{
+    font-weight: 500;
+  }
+
   input[type="text"]{
     border: none;
     border-bottom: black 1px solid;
+    text-transform: lowercase;
+  }
+  p{
+    font-size: 1.1rem;
+    margin: 10px 0;
+    line-height: 1.6;
   }
   small{
     background: #d2d2d2;
@@ -11,7 +22,13 @@
     font-size: 1.1rem;
     font-weight: 500;
     display: block;
+    width: fit-content;
     height: fit-content;
     text-align: center;
+  }
+
+  .success{
+    background-color: #419941;
+    color: white;
   }
 }
